// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StringInput should render 1`] = `
<div>
  <div
    class="criteria-statement"
  >
    <div
      class="form-group form-group-autofit"
    >
      <div
        class="form-group-item entity-name form-group-item-label form-group-item-shrink"
      />
      <div
        class="form-group-item display-value form-group-item-label form-group-item-shrink"
      />
      <div>
        operator
      </div>
      <div
        class="form-group-item"
      >
        <div
          class="input-group select-input-root"
        >
          <div
            class="input-group-item"
          >
            <input
              aria-autocomplete="list"
              aria-controls="clay-id-1"
              aria-labelledby="clay-autocomplete-label-1"
              autocomplete="off"
              autocorrect="off"
              class="form-control input-group-inset input-group-inset-after"
              id="clay-autocomplete-1"
              role="combobox"
              spellcheck="false"
              type="text"
              value=""
            />
            <div
              aria-label="Loading"
              aria-valuemax="100"
              aria-valuemin="0"
              class="input-group-inset-item input-group-inset-item-after"
              role="progressbar"
            >
              <span
                class="inline-item inline-item-middle"
              >
                <span
                  aria-hidden="true"
                  class="loading-animation loading-animation-sm"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StringInput should render with data 1`] = `
<div>
  <div
    class="criteria-statement"
  >
    <div
      class="form-group form-group-autofit"
    >
      <div
        class="form-group-item entity-name form-group-item-label form-group-item-shrink"
      />
      <div
        class="form-group-item display-value form-group-item-label form-group-item-shrink"
      >
        Name
      </div>
      <div>
        operator
      </div>
      <div
        class="form-group-item"
      >
        <div
          class="input-group select-input-root"
        >
          <div
            class="input-group-item"
          >
            <input
              aria-autocomplete="list"
              aria-controls="clay-id-3"
              aria-labelledby="clay-autocomplete-label-1"
              autocomplete="off"
              autocorrect="off"
              class="form-control input-group-inset input-group-inset-after"
              id="clay-autocomplete-1"
              role="combobox"
              spellcheck="false"
              type="text"
              value="Test Test"
            />
            <div
              aria-label="Loading"
              aria-valuemax="100"
              aria-valuemin="0"
              class="input-group-inset-item input-group-inset-item-after"
              role="progressbar"
            >
              <span
                class="inline-item inline-item-middle"
              >
                <span
                  aria-hidden="true"
                  class="loading-animation loading-animation-sm"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
